--- a/libversion/gitversion.cpp.in
+++ b/libversion/gitversion.cpp.in
@@ -14,7 +14,8 @@ const char *getGitVersion(void)
   if (!init)
   {
     strncpy(gitVersionString,"@GIT_HEAD_SHA1@",BUF_SIZE-1);
-    strncat(gitVersionString,!strcmp("@GIT_IS_DIRTY@","true")?"*":"",BUF_SIZE-1);
+    gitVersionString[BUF_SIZE-1]='\0';
+    strncat(gitVersionString,!strcmp("@GIT_IS_DIRTY@","true")?"*":"",BUF_SIZE-strlen(gitVersionString)-1);
     if (!strcmp("@GIT_HEAD_SHA1@", "GIT-NOTFOUND")) gitVersionString[0] = '\0';
     gitVersionString[BUF_SIZE-1]='\0';
     init = true;
